@@ -1,3 +1,11 @@
+Thu Jul 15 00:35:09 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (localtime_with_gmtoff_zone): renamed from
+	  localtime_with_gmtoff and return the timezone abbreviation name.
+	  (guess_local_offset): return the isdst and timezone abbreviation name.
+	  (localtimew): use the returned isdst and timezone abbreviation name.
+	  [ruby-core:31275]
+
 Mon Nov 22 14:22:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* time.c (time_zone): use rb_locale_str_new_cstr to set encoding
